Duh. Gotta read more. Created new directory (Thought the file was supposed to be named task, not a directory)

--- a/task0/Dockerfile
+++ b/task0/Dockerfile
@@ -1,3 +1,6 @@
+# Specify what we're using
 FROM ubuntu:latest
+# Update and Upgrade
 RUN apt-get update && apt-get upgrade -y
+# Command to run
 CMD echo "Hello, World!"
