Don't remember why I did that in the first place, but going back and correcting it.

--- a/task1/Dockerfile
+++ b/task1/Dockerfile
@@ -1,6 +1,6 @@
 # Back-End
 # Set the platform, use the same Python version as my local
-FROM --platform=$BUILDPLATFORM python:3.8-slim-buster AS codebase
+FROM ubuntu:latest
 
 # Update and install dependencies 
 RUN apt-get update && apt-get -y install python3-pip
